--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "metro-config": "^0.66.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-dotenv": "^3.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^7.24.3",
     "react-native-safe-area-context": "^3.3.2",
@@ -29,7 +30,7 @@
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.66.2",
+    "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
