--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "metro-config": "^0.66.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-image-picker": "^4.6.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^7.24.3",
     "react-native-safe-area-context": "^3.3.2",
