--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "react-native-navigation": "^7.24.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1",
-    "react-native-svg-transformer": "^0.14.3"
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
     "@babel/runtime": "7.16.5",
     "@react-native-community/eslint-config": "2.0.0",
+    "@react-navigation/native": "^6.0.6",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
