--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@baronha/react-native-multiple-image-picker": "^0.4.8",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@react-native-community/masked-view": "^0.1.11",
@@ -18,10 +19,13 @@
     "metro-config": "^0.66.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-image-picker": "^4.6.0",
+    "react-native-element-dropdown": "^1.5.7",
+    "react-native-image-picker": "^4.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^7.24.3",
+    "react-native-permissions": "^3.2.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
@@ -35,6 +39,7 @@
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
+    "react-native-vector-icons": "^9.0.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
