--- a/ios/AwesomeProject/Info.plist
+++ b/ios/AwesomeProject/Info.plist
@@ -35,8 +35,23 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>App needs Camera Access Permission for testing</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>App needs Microphone Access Permission for testing</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string> App needs photo library Access</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Notable-Regular.ttf</string>
+		<string>SFUIDisplay-Bold.otf</string>
+		<string>SFUIDisplay-Light.otf</string>
+		<string>SFUIDisplay-Medium.otf</string>
+		<string>SFUIDisplay-Regular.otf</string>
+		<string>SFUIDisplay-Semibold.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,14 +66,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Notable-Regular.ttf</string>
-		<string>SFUIDisplay-Bold.otf</string>
-		<string>SFUIDisplay-Light.otf</string>
-		<string>SFUIDisplay-Medium.otf</string>
-		<string>SFUIDisplay-Regular.otf</string>
-		<string>SFUIDisplay-Semibold.otf</string>
-	</array>
+
+
 </dict>
 </plist>
