--- a/package.json
+++ b/package.json
@@ -10,13 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@baronha/react-native-multiple-image-picker": "^0.4.8",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
     "metro-config": "^0.66.2",
+    "popup-ui": "^1.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-element-dropdown": "^1.5.7",
@@ -34,11 +29,19 @@
   "devDependencies": {
     "@babel/core": "7.16.5",
     "@babel/runtime": "7.16.5",
+    "@baronha/react-native-multiple-image-picker": "^0.4.8",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@paraboly/react-native-information-card": "^0.1.1",
     "@react-native-community/eslint-config": "2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
+    "react-native-ios-modal": "^0.1.8",
     "react-native-vector-icons": "^9.0.0",
     "react-test-renderer": "17.0.2"
   },
